deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nomis-delius-emulator
  namespace: offender-management-staging
  labels:
    app: nomis-delius-emulator
spec:
  ports:
  - port: 3001
    name: http
    targetPort: 3001
  selector:
    app: nomis-delius-emulator
